Complete HashMap class

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HashMap</title>
     <script src="hashMap.js" type="module" defer></script>
+    <script src="hashSet.js" type="module" defer></script>
     <style>
       body {
         background-color: rgb(34, 33, 53);
